[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
documentation = "https://docs.rs/turbonet"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbonet"
readme = "../README.md"
repository = "https://github.com/trevyn/turbonet"
rust-version = "1.56"
version = "0.1.0"

[dependencies]
blst = "0.3"
gflags = "0.3"
hex = "0.4"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
tokio = {version = "1", features = ["full"]}
turbocharger = "0.1"
turbosql = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"

[patch.crates-io]
rusqlite = {git = "https://github.com/rusqlite/rusqlite", branch = "master"}
turbocharger = {git = "https://github.com/trevyn/turbocharger", branch = "main"}
# turbocharger = {path = "../turbocharger/turbocharger"}
turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"}

[profile.dev]
# see https://github.com/dtolnay/inventory/issues/24
incremental = false
