[package]
authors = ["The authors"]
documentation = "https://docs.rs/turbonet"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbonet"
readme = "../README.md"
repository = "https://github.com/trevyn/turbonet"
rust-version = "1.56"
version = "0.1.0"

[dependencies]
blst = {version = "0.3", features = ["portable"]}
crypto_box = "0.7.1"
gflags = "0.3"
hex = "0.4"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde_with = "1"
tokio = {version = "1", features = ["rt"]}
tracked = "0.5"
turbocharger = {version = "0.3", default-features = false}
turbosql = "0.6"

[dev-dependencies]
pretty_env_logger = "0.4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[patch.crates-io]
# rusqlite = {git = "https://github.com/rusqlite/rusqlite", branch = "master"}
# turbocharger = {git = "https://github.com/trevyn/turbocharger", branch = "axum"}
# turbocharger = {path = "../turbocharger/turbocharger"}
# turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"}

[profile.dev]
incremental = false # see https://github.com/dtolnay/inventory/issues/24
